--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation project(':LyticalRecognition')
+    //implementation project(':LyticalRecognition')
+    implementation 'com.github.NightingaleNath:LyticalSimilarity:1.0.0'
 
     def camerax_version = "1.3.1" // Check for the latest version on the official website
     implementation "androidx.camera:camera-camera2:$camerax_version"
